--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,28 @@
-.App {
-  text-align: center;
+#root {
+  background-image: url('https://images.unsplash.com/photo-1543165796-5426273eaab3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1000px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+#app {
+  padding-top: 50px
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#wordList {
+  background: black;
+  opacity: 0.5
 }
 
-.App-link {
-  color: #61dafb;
+#button {
+  border-radius: 10%;
+  transition: all 300ms ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#button:hover {
+  background: #D6F03E;
+}
+
+#words {
+  background: blue
 }
