Update styling, setup text-overflow, add error message

--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,16 @@
 }
 
 #button:hover {
-  background: #D6F03E;
+  background: rgb(72, 212, 16);
+}
+
+#buttonText {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #root {
-  background: #2980B9;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+  background: rgb(90, 160, 207);
   height: 1000px;
 }
 
@@ -22,12 +25,8 @@
   opacity: 0.5;
 }
 
-#words {
-  background: blue
-}
-
 #wordButton {
-  width: 200px;
+  width: 150px;
 }
 
 .ui.grid>.row>.column {
